fix: update default invocation to prevent warnings on JVM 25